# Blizzard-Database-Library

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.py
cmake/: CMakeLib.txt  cmake-function.cmake
include/: BitReader.h  BlizzardDatabase.h  BlizzardDatabaseRecord.h  BlizzardDatabaseRecordCollection.h  BlizzardDatabaseTable.h  DatabaseBuilder.h  DatabaseDefinition.h  DatabaseEngine.h  DbcRecord.h  DbcTable.h  Extensions.h  FileStructures.h  StreamReader.h  Types.h  WDC3Reader.h
include/extensions/: FlagExtensions.h  MemoryExtensions.h  StringExtensions.h  VectorExtensions.h
include/flags/: Flags.h  TableFormatSignatures.h
include/readers/: BlizzardTableReaderFactory.h  IBlizzardTableReader.h  WDC3Reader.h
include/readers/wdbc/: WDBCRecordReader.h  WDBCTableReader.h
include/readers/wdc3/: WDC3Reader.h  WDC3RecordReader.h  WDC3SectionReader.h  WDC3TableReader.h
include/stream/: BitReader.h  StreamReader.h
include/structures/: Build.h  BuildRange.h  FileStructures.h  Types.h
src/: BitReader.cpp  BlizzardDatabase.cpp  BlizzardDatabase.h  Build.h  BuildRange.h  DBCD.cpp  DBCD.h  DatabaseBuilder.h  DatabaseDefinition.cpp  DatabaseDefinition.h  DbcTable.h  SteamReader.cpp  StreamReader.h  Types.h  WDC3Reader.cpp  WDC3Reader.h  WDC3Row.cpp  WDC3Row.h
src/DatabaseDefinitionsLib/: DatabaseBuild.cpp  DatabaseBuilder.cpp  DatabaseBuilder.h  DatabaseDefinition.cpp  DatabaseDefinition.h  FileStructures.h  Shared.h
src/readers/: BlizzardTableReaderFactory.cpp  WDC3Reader.cpp
src/readers/wdbc/: WDBCRecordReader.cpp  WDBCTableReader.cpp
src/readers/wdc3/: Ref_WDC3Reader.cpp  WDC3Reader.cpp  WDC3RecordReader.cpp  WDC3SectionReader.cpp  WDC3TableReader.cpp
src/stream/: BitReader.cpp  SteamReader.cpp
test/: main.cpp
